--- a/static/css/style.css
+++ b/static/css/style.css
@@ -357,7 +357,7 @@ nav i.material-icons {
     font-family: 'Merriweather';
     padding-top: 5px;
     opacity: .9;
-    background-color: #43a047;
+    background-color: #47A94C;
     margin: 15px 0 5px 10px;
     margin-top: 15px;
     margin-bottom: 5px;
@@ -367,6 +367,11 @@ nav i.material-icons {
     text-transform: none;
     border: solid #2a652d 1px;
     font-weight: 500;
+}
+
+.add-alt-button:hover {
+    background-color: black;
+    color: #47A94C!important;
 }
 
 .new-word-input {
