--- a/templates/add_tag.html
+++ b/templates/add_tag.html
@@ -36,7 +36,7 @@
                 <input name="name-4" id="name-4" type="text" maxlength="20">
                 <label for="name-4" class="input-field-name">Fourth tag name</label>
             </div>
-            <div class="add-tag-cancel-submit">
+            <div class="new-word-cancel-submit">
                 <button class="btn red">Cancel <i class="small material-icons">close</i></button>
                 <button class="btn blue" type="submit">Submit <i class="small material-icons">check</i></button>
             </div>
