--- a/templates/log_in.html
+++ b/templates/log_in.html
@@ -23,7 +23,7 @@
                         <label for="password">Password</label>                        
                     </div>
                 </div>
-                <div class="row">
+                <div class="row non-user-form-confirm">
                     <button type="submit" class="btn-large right deep-purple lighten-1">Log In</button>
                 </div>
             </div>
