--- a/templates/register.html
+++ b/templates/register.html
@@ -62,7 +62,7 @@
                         <label for="confirm_password">Confirm Password</label>                        
                     </div>
                 </div>
-                <div class="row">
+                <div class="row  non-user-form-confirm">
                     <button type="submit" class="btn-large right deep-purple lighten-1">REGISTER</button>
                 </div>
             </div>
