--- a/templates/home.html
+++ b/templates/home.html
@@ -54,7 +54,7 @@
                     <span class="card-title">{{ words[0].name.capitalize() }}</span>
                     <p>{{ words[0].meaning }}</p>
                 </div>
-                <div class="card-action">
+                <div class="link-to-word card-action">
                     <a href="{{ url_for('word_page', word_Id=words[0]._id) }}">Click here to find out more!</a>
                 </div>
             </div>
@@ -71,7 +71,7 @@
                     <span class="card-title">{{ words[1].name.capitalize() }}</span>
                     <p>{{ words[1].meaning }}</p>
                 </div>
-                <div class="card-action">
+                <div class="link-to-word card-action">
                     <a href="{{ url_for('word_page', word_Id=words[1]._id) }}">Click here to find out more!</a>
                 </div>
             </div>
@@ -88,7 +88,7 @@
                     <span class="card-title">{{ words[2].name.capitalize() }}</span>
                     <p>{{ words[2].meaning }}</p>
                 </div>
-                <div class="card-action">
+                <div class="link-to-word card-action">
                     <a href="{{ url_for('word_page', word_Id=words[2]._id) }}">Click here to find out more!</a>
                 </div>
             </div>
@@ -105,7 +105,7 @@
                     <span class="card-title">{{ words[3].name.capitalize() }}</span>
                     <p>{{ words[3].meaning }}</p>
                 </div>
-                <div class="card-action">
+                <div class="link-to-word card-action">
                     <a href="{{ url_for('word_page', word_Id=words[3]._id) }}">Click here to find out more!</a>
                 </div>
             </div>
