--- a/templates/profile.html
+++ b/templates/profile.html
@@ -78,7 +78,7 @@
                                 <span class="card-title"><strong>{{ word.name }}</strong></span>
                                 <p>{{ word.meaning }}</p>
                             </div>
-                            <div class="card-action">
+                            <div class="link-to-word card-action">
                                 <a href="{{ url_for('word_page', word_Id=word._id) }}">Click here to find out more!</a>
                             </div>
                         </div>
@@ -100,7 +100,7 @@
                                 <span class="card-title"><strong>{{ word.name }}</strong></span>
                                 <p>{{ word.meaning }}</p>
                             </div>
-                            <div class="card-action">
+                            <div class="link-to-word card-action">
                                 <a href="{{ url_for('word_page', word_Id=word._id) }}">Click here to find out more!</a>
                             </div>
                         </div>
