Add TESTING.md file

--- a/templates/base.html
+++ b/templates/base.html
@@ -72,7 +72,7 @@
                         </a></li>
                         <li><a class="dropdown-trigger" href="#!" data-target="loggedIn">
                             <i class="material-icons">account_circle</i>
-                            <i id="notLoggedInIcon" class="material-icons right">arrow_drop_down</i>
+                            <i class="material-icons right">arrow_drop_down</i>
                         </a></li>
                     {% else %}
                         <li><a class="dropdown-trigger" href="#!" data-target="wordsDropdown">
@@ -80,7 +80,7 @@
                         </a></li>
                         <li><a class="dropdown-trigger" href="#!" data-target="notLoggedIn">
                             <i class="material-icons">account_circle</i>
-                            <i id="notLoggedInIcon" class="material-icons right">arrow_drop_down</i>
+                            <i class="material-icons right">arrow_drop_down</i>
                         </a></li>
                     {% endif %}
                 </ul>
