Remove duplicate id tags from navbar

--- a/templates/base.html
+++ b/templates/base.html
@@ -98,7 +98,7 @@
                         </a></li>
                         <li><a class="dropdown-trigger" href="#!" data-target="loggedInMobile">
                             User
-                            <i id="notLoggedInIcon" class="material-icons">arrow_drop_down</i>
+                            <i class="material-icons">arrow_drop_down</i>
                         </a></li>
                 {% else %}
                         <li><a class="dropdown-trigger" href="#!" data-target="wordsDropdownMobile">
@@ -106,7 +106,7 @@
                         </a></li>
                         <li><a class="dropdown-trigger" href="#!" data-target="notLoggedInMobile">
                             User
-                            <i id="notLoggedInIcon" class="material-icons">arrow_drop_down</i>
+                            <i class="material-icons">arrow_drop_down</i>
                         </a></li>
             {% endif %}
         </ul>
