Remove erroneous tag from textarea

--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -30,8 +30,7 @@
             <div class="row">
                 <span class="form-instruction">Tell Us About Yourself:</span>
                 <div class="input-field col s12">
-                    <textarea id="description" name="description" type="text" 
-                        class="materialize-textarea">{{ user.description }}</textarea>
+                    <textarea id="description" name="description" class="materialize-textarea">{{ user.description }}</textarea>
                     <label for="description">Personal Description</label>
                 </div>
             </div>
