Remove erroneous tags from textareas

--- a/templates/edit_word.html
+++ b/templates/edit_word.html
@@ -16,8 +16,9 @@
 
             <!-- alternative spellings of word -->
                 <div class="col s12 form-modal-button">
-                    <span class="btn add-alt-button modal-trigger" href="#modal1"><i
-                            class="tiny material-icons">add_circle</i> Edit other spellings</span>
+                    <span class="btn add-alt-button modal-trigger">
+                        <a  href="#modal1"><i class="tiny material-icons">add_circle</i> Edit other spellings</a>
+                    </span>
                 </div>
             <!-- Modal Structure -->
             <div id="modal1" class="modal">
@@ -54,7 +55,7 @@
             <div class="form-section">
                 <span class="form-instruction">Change the word's meaning:</span>
                     <div class="input-field new-word-input col s12">
-                        <textarea name="meaning" id="meaning" type="text" class="validate materialize-textarea" 
+                        <textarea name="meaning" id="meaning" class="validate materialize-textarea" 
                             required>{{ word.meaning }}</textarea>
                         <label for="meaning" class="input-field-name">Definition</label>
                     </div>
@@ -73,27 +74,27 @@
                 <div class="modal-content">
                     <h4>Other Definitions</h4>
                     <div class="input-field">
-                        <textarea name="alt_def_1" id="alt_def_1" type="text" 
+                        <textarea name="alt_def_1" id="alt_def_1" 
                             class="materialize-textarea">{{ word.altDefinitions[0] }}</textarea>
                         <label for="alt_def_1">New definition 1</label>
                     </div>
                     <div class="input-field">
-                        <textarea name="alt_def_2" id="alt_def_2" type="text" 
+                        <textarea name="alt_def_2" id="alt_def_2" 
                             class="materialize-textarea">{{ word.altDefinitions[1] }}</textarea>
                         <label for="alt_def_2">New definition 2</label>
                     </div>
                     <div class="input-field">
-                        <textarea name="alt_def_3" id="alt_def_3" type="text" 
+                        <textarea name="alt_def_3" id="alt_def_3" 
                             class="materialize-textarea">{{ word.altDefinitions[2] }}</textarea>
                         <label for="alt_def_3">New definition 3</label>
                     </div>
                     <div class="input-field">
-                        <textarea name="alt_def_4" id="alt_def_4" type="text" 
+                        <textarea name="alt_def_4" id="alt_def_4"
                             class="materialize-textarea">{{ word.altDefinitions[3] }}</textarea>
                         <label for="alt_def_4">New definition 4</label>
                     </div>
                     <div class="input-field">
-                        <textarea name="alt_def_5" id="alt_def_5" type="text" 
+                        <textarea name="alt_def_5" id="alt_def_5" 
                             class="materialize-textarea">{{ word.altDefinitions[4] }}</textarea>
                         <label for="alt_def_5">New definition 5</label>
                     </div>
@@ -107,7 +108,7 @@
             <div class="form-section">
                 <span class="form-instruction">Change the word's use:</span>
                 <div class="input-field new-word-input col s12">
-                    <textarea name="use" id="use" type="text" class="validate materialize-textarea" required>{{ word.uses[0] }}</textarea>
+                    <textarea name="use" id="use" class="validate materialize-textarea" required>{{ word.uses[0] }}</textarea>
                     <label for="use" class="input-field-name">Example</label>
                 </div>
             </div>
@@ -125,23 +126,23 @@
                 <div class="modal-content">
                     <h4>Other Examples</h4>
                     <div class="input-field">
-                        <textarea name="alt_use_1" id="alt_use_1" type="text" class="materialize-textarea">{{ word.uses[1] }}</textarea>
+                        <textarea name="alt_use_1" id="alt_use_1" class="materialize-textarea">{{ word.uses[1] }}</textarea>
                         <label for="alt_use_1">New example 1</label>
                     </div>
                     <div class="input-field">
-                        <textarea name="alt_use_2" id="alt_use_2" type="text" class="materialize-textarea">{{ word.uses[2] }}</textarea>
+                        <textarea name="alt_use_2" id="alt_use_2" class="materialize-textarea">{{ word.uses[2] }}</textarea>
                         <label for="alt_use_2">New example 2</label>
                     </div>
                     <div class="input-field">
-                        <textarea name="alt_use_3" id="alt_use_3" type="text" class="materialize-textarea">{{ word.uses[3] }}</textarea>
+                        <textarea name="alt_use_3" id="alt_use_3" class="materialize-textarea">{{ word.uses[3] }}</textarea>
                         <label for="alt_use_3">New example 3</label>
                     </div>
                     <div class="input-field">
-                        <textarea name="alt_use_4" id="alt_use_4" type="text" class="materialize-textarea">{{ word.uses[4] }}</textarea>
+                        <textarea name="alt_use_4" id="alt_use_4" class="materialize-textarea">{{ word.uses[4] }}</textarea>
                         <label for="alt_use_4">New example 4</label>
                     </div>
                     <div class="input-field">
-                        <textarea name="alt_use_5" id="alt_use_5" type="text" class="materialize-textarea">{{ word.uses[5] }}</textarea>
+                        <textarea name="alt_use_5" id="alt_use_5" class="materialize-textarea">{{ word.uses[5] }}</textarea>
                         <label for="alt_use_5">New example 5</label>
                     </div>
                 </div>
