Remove erroneous href tag from span elements on edit_word.html

--- a/templates/edit_word.html
+++ b/templates/edit_word.html
@@ -64,9 +64,9 @@
 
             <!-- alternative meanings of word -->
             <div class="col s12 form-modal-button">
-                <span class="btn add-alt-button modal-trigger" href="#modal2"><i
-                        class="tiny material-icons">add_circle</i> Edit other
-                    definitions</span>
+                <span class="btn add-alt-button modal-trigger">
+                    <a  href="#modal2"><i class="tiny material-icons">add_circle</i> Edit other definitions</a>
+                </span>
             </div>
 
             <!-- Modal Structure -->
@@ -116,9 +116,9 @@
 
             <!-- alternative uses of word -->
             <div class="col s12 form-modal-button">
-                <span class="btn add-alt-button modal-trigger" href="#modal3"><i
-                        class="tiny material-icons">add_circle</i> Edit other
-                    examples</span>
+                <span class="btn add-alt-button modal-trigger">
+                    <a  href="#modal3"><i class="tiny material-icons">add_circle</i> Edit other examples</a>
+                </span>
             </div>
 
             <!-- Modal Structure -->
@@ -178,8 +178,8 @@
             <!-- extra tags -->
             <div class="form-section col s12">
                 <div class="col s12 form-modal-button" id="moreTagsButton">
-                    <span class="btn add-alt-button modal-trigger" href="#modal4">
-                        <i class="tiny material-icons">add_circle</i> Add more tags
+                    <span class="btn add-alt-button modal-trigger">
+                        <a  href="#modal4"><i class="tiny material-icons">add_circle</i> Add more tags</a>
                     </span>
                 </div>
             </div>
