--- a/static/css/style.css
+++ b/static/css/style.css
@@ -371,7 +371,6 @@ nav i.material-icons {
 /* form pages */
 
 .add-alt-button {
-    color: black !important;
     font-family: 'Merriweather';
     padding-top: 5px;
     opacity: .9;
@@ -385,6 +384,10 @@ nav i.material-icons {
     text-transform: none;
     border: solid #2a652d 1px;
     font-weight: 500;
+}
+
+.add-alt-button a {
+    color: black !important;
 }
 
 .add-alt-button:hover {
