Tidy up css errors on new_word.html

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -390,7 +390,8 @@ nav i.material-icons {
     color: black !important;
 }
 
-.add-alt-button:hover {
+.add-alt-button:hover,
+.add-alt-button a:hover {
     background-color: black;
     color: #47A94C!important;
 }
