--- a/templates/new_word.html
+++ b/templates/new_word.html
@@ -14,8 +14,9 @@
 
             <!-- alternative spellings of word -->
             <div class="col s12 form-modal-button">
-                <span class="btn green-text add-alt-button modal-trigger" href="#modal1"><i
-                        class="tiny material-icons">add_circle</i> Add other spellings</span>
+                <span class="btn add-alt-button modal-trigger">
+                    <a  href="#modal1"><i class="tiny material-icons">add_circle</i> Add other spellings</a>
+                </span>
             </div>
             <!-- Modal Structure -->
             <div id="modal1" class="modal">
@@ -52,16 +53,16 @@
             <div class="form-section">
                 <span class="form-instruction">Tell us what the word means:</span>
                 <div class="input-field new-word-input col s12">
-                    <textarea name="meaning" id="meaning" type="text" class="validate materialize-textarea" required></textarea>
+                    <textarea name="meaning" id="meaning" class="validate materialize-textarea" required></textarea>
                     <label for="meaning" class="input-field-name">Definition</label>
                 </div>
             </div>
 
             <!-- alternative meanings of word -->
             <div class="col s12 form-modal-button">
-                <span class="btn green-text add-alt-button modal-trigger" href="#modal2"><i
-                        class="tiny material-icons">add_circle</i> Add other
-                    definitions</span>
+                <span class="btn add-alt-button modal-trigger">
+                    <a  href="#modal2"><i class="tiny material-icons">add_circle</i> Add other definitions</a>
+                </span>
             </div>
 
             <!-- Modal Structure -->
@@ -69,23 +70,23 @@
                 <div class="modal-content">
                     <h4>Other Definitions</h4>
                     <div class="input-field">
-                        <textarea name="alt_def_1" id="alt_def_1" type="text" class="materialize-textarea"></textarea>
+                        <textarea name="alt_def_1" id="alt_def_1" class="materialize-textarea"></textarea>
                         <label for="alt_def_1">New definition 1</label>
                     </div>
                     <div class="input-field">
-                        <textarea name="alt_def_2" id="alt_def_2" type="text" class="materialize-textarea"></textarea>
+                        <textarea name="alt_def_2" id="alt_def_2"  class="materialize-textarea"></textarea>
                         <label for="alt_def_2">New definition 2</label>
                     </div>
                     <div class="input-field">
-                        <textarea name="alt_def_3" id="alt_def_3" type="text" class="materialize-textarea"></textarea>
+                        <textarea name="alt_def_3" id="alt_def_3" class="materialize-textarea"></textarea>
                         <label for="alt_def_3">New definition 3</label>
                     </div>
                     <div class="input-field">
-                        <textarea name="alt_def_4" id="alt_def_4" type="text" class="materialize-textarea"></textarea>
+                        <textarea name="alt_def_4" id="alt_def_4" class="materialize-textarea"></textarea>
                         <label for="alt_def_4">New definition 4</label>
                     </div>
                     <div class="input-field">
-                        <textarea name="alt_def_5" id="alt_def_5" type="text" class="materialize-textarea"></textarea>
+                        <textarea name="alt_def_5" id="alt_def_5" class="materialize-textarea"></textarea>
                         <label for="alt_def_5">New definition 5</label>
                     </div>
                 </div>
@@ -98,16 +99,16 @@
             <div class="form-section">
                 <span class="form-instruction">Use the word in a sentence:</span>
                 <div class="input-field new-word-input col s12">
-                    <textarea name="use" id="use" type="text" class="validate materialize-textarea" required></textarea>
+                    <textarea name="use" id="use" class="validate materialize-textarea" required></textarea>
                     <label for="use" class="input-field-name">Example</label>
                 </div>
             </div>
 
             <!-- alternative uses of word -->
             <div class="col s12 form-modal-button">
-                <span class="btn green-text add-alt-button modal-trigger" href="#modal3"><i
-                        class="tiny material-icons">add_circle</i> Add other
-                    examples</span>
+                <span class="btn add-alt-button modal-trigger">
+                    <a  href="#modal3"><i class="tiny material-icons">add_circle</i> Add other examples</a>
+                </span>
             </div>
 
             <!-- Modal Structure -->
@@ -115,23 +116,23 @@
                 <div class="modal-content">
                     <h4>Other Examples</h4>
                     <div class="input-field">
-                        <textarea name="alt_use_1" id="alt_use_1" type="text" class="materialize-textarea"></textarea>
+                        <textarea name="alt_use_1" id="alt_use_1" class="materialize-textarea"></textarea>
                         <label for="alt_use_1">New example 1</label>
                     </div>
                     <div class="input-field">
-                        <textarea name="alt_use_2" id="alt_use_2" type="text" class="materialize-textarea"></textarea>
+                        <textarea name="alt_use_2" id="alt_use_2" class="materialize-textarea"></textarea>
                         <label for="alt_use_2">New example 2</label>
                     </div>
                     <div class="input-field">
-                        <textarea name="alt_use_3" id="alt_use_3" type="text" class="materialize-textarea"></textarea>
+                        <textarea name="alt_use_3" id="alt_use_3" class="materialize-textarea"></textarea>
                         <label for="alt_use_3">New example 3</label>
                     </div>
                     <div class="input-field">
-                        <textarea name="alt_use_4" id="alt_use_4" type="text" class="materialize-textarea"></textarea>
+                        <textarea name="alt_use_4" id="alt_use_4" class="materialize-textarea"></textarea>
                         <label for="alt_use_4">New example 4</label>
                     </div>
                     <div class="input-field">
-                        <textarea name="alt_use_5" id="alt_use_5" type="text" class="materialize-textarea"></textarea>
+                        <textarea name="alt_use_5" id="alt_use_5" class="materialize-textarea"></textarea>
                         <label for="alt_use_5">New example 5</label>
                     </div>
                 </div>
@@ -155,8 +156,8 @@
             </div>
 
             <div class="col s12 form-modal-button">
-                <span class="btn green-text add-alt-button modal-trigger" href="#modal4">
-                    <i class="tiny material-icons">add_circle</i> Add more tags
+                <span class="btn add-alt-button modal-trigger">
+                    <a  href="#modal4"><i class="tiny material-icons">add_circle</i> Add more tags</a>
                 </span>
             </div>
 
