Tidu up erroneuous placement os span end tag on word_page.html

--- a/templates/word-page.html
+++ b/templates/word-page.html
@@ -33,9 +33,9 @@
                         {% for spelling in word.altSpellings %}
                             <span class="alternative-spellings">{{ spelling }}</span>
                         {% endfor %}
-                        ]
+                        ] </span>
                 {% endif %}
-                </span>
+                
 
                 <div class="word-definitions">
                 <!-- alternate definitions check -->
