--- a/templates/edit_word.html
+++ b/templates/edit_word.html
@@ -16,9 +16,7 @@
 
             <!-- alternative spellings of word -->
                 <div class="col s12 form-modal-button">
-                    <span class="btn add-alt-button modal-trigger">
-                        <a  href="#modal1"><i class="tiny material-icons">add_circle</i> Edit other spellings</a>
-                    </span>
+                    <a class="btn modal-trigger add-alt-button" href="#modal1"><i class="tiny material-icons">add_circle</i> Edit other spellings</a>
                 </div>
             <!-- Modal Structure -->
             <div id="modal1" class="modal">
@@ -64,9 +62,7 @@
 
             <!-- alternative meanings of word -->
             <div class="col s12 form-modal-button">
-                <span class="btn add-alt-button modal-trigger">
-                    <a  href="#modal2"><i class="tiny material-icons">add_circle</i> Edit other definitions</a>
-                </span>
+                <a class="btn modal-trigger add-alt-button" href="#modal2"><i class="tiny material-icons">add_circle</i> Edit other definitions</a>
             </div>
 
             <!-- Modal Structure -->
@@ -116,9 +112,7 @@
 
             <!-- alternative uses of word -->
             <div class="col s12 form-modal-button">
-                <span class="btn add-alt-button modal-trigger">
-                    <a  href="#modal3"><i class="tiny material-icons">add_circle</i> Edit other examples</a>
-                </span>
+                <a class="btn modal-trigger add-alt-button" href="#modal3"><i class="tiny material-icons">add_circle</i> Edit other examples</a>
             </div>
 
             <!-- Modal Structure -->
@@ -178,9 +172,7 @@
             <!-- extra tags -->
             <div class="form-section col s12">
                 <div class="col s12 form-modal-button" id="moreTagsButton">
-                    <span class="btn add-alt-button modal-trigger">
-                        <a  href="#modal4"><i class="tiny material-icons">add_circle</i> Add more tags</a>
-                    </span>
+                    <a class="btn modal-trigger add-alt-button" href="#modal4"><i class="tiny material-icons">add_circle</i> Add more tags</a>
                 </div>
             </div>
 
