--- a/templates/new_word.html
+++ b/templates/new_word.html
@@ -14,9 +14,7 @@
 
             <!-- alternative spellings of word -->
             <div class="col s12 form-modal-button">
-                <span class="btn add-alt-button modal-trigger">
-                    <a  href="#modal1"><i class="tiny material-icons">add_circle</i> Add other spellings</a>
-                </span>
+                <a class="btn modal-trigger add-alt-button" href="#modal1"><i class="tiny material-icons">add_circle</i> Add other spellings</a>
             </div>
             <!-- Modal Structure -->
             <div id="modal1" class="modal">
@@ -60,9 +58,7 @@
 
             <!-- alternative meanings of word -->
             <div class="col s12 form-modal-button">
-                <span class="btn add-alt-button modal-trigger">
-                    <a  href="#modal2"><i class="tiny material-icons">add_circle</i> Add other definitions</a>
-                </span>
+                <a class="btn modal-trigger add-alt-button" href="#modal2"><i class="tiny material-icons">add_circle</i> Add other definitions</a>
             </div>
 
             <!-- Modal Structure -->
@@ -106,9 +102,7 @@
 
             <!-- alternative uses of word -->
             <div class="col s12 form-modal-button">
-                <span class="btn add-alt-button modal-trigger">
-                    <a  href="#modal3"><i class="tiny material-icons">add_circle</i> Add other examples</a>
-                </span>
+                <a class="btn modal-trigger add-alt-button" href="#modal3"><i class="tiny material-icons">add_circle</i> Add other examples</a>
             </div>
 
             <!-- Modal Structure -->
@@ -156,9 +150,7 @@
             </div>
 
             <div class="col s12 form-modal-button">
-                <span class="btn add-alt-button modal-trigger">
-                    <a  href="#modal4"><i class="tiny material-icons">add_circle</i> Add more tags</a>
-                </span>
+                <a class="btn modal-trigger add-alt-button" href="#modal4"><i class="tiny material-icons">add_circle</i> Add more tags</a>
             </div>
 
 
